kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: earthworks
  labels:
    istio-injection: enabled
