kubernetes/03-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: earthworks-api
  name: earthworks-api
  namespace: earthworks
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: earthworks-api
status:
  loadBalancer: {}
