kubernetes/06-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: earthworks-web
  name: earthworks-web
  namespace: earthworks
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: earthworks-web
status:
  loadBalancer: {}
