kubernetes/03-web-deploy.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: earthworks-web
  name: earthworks-web
  namespace: earthworks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: earthworks-web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: earthworks-web
        version: v1
    spec:
    
      containers:
      - image: stephenhillier/earthworks-web:latest
        name: earthworks-web
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 20mb
          limits:
            cpu: 100m
            memory: 100mb
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: earthworks-web
  name: earthworks-web
  namespace: earthworks
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: earthworks-web
status:
  loadBalancer: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: earthworks-web-gateway
  namespace: earthworks
  labels:
    app: earthworks-web
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - earthworks.islandcivil.com
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: earthworks-web
  namespace: earthworks
  labels:
    app: earthworks-web
spec:
  hosts:
  - earthworks.islandcivil.com
  gateways:
  - earthworks-web-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: earthworks-web
        port:
          number: 80
