kubernetes/04-api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: earthworks-api-gateway
  namespace: earthworks
  labels:
    app: earthworks-api
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - earthworks.islandcivil.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: earthworks
  namespace: earthworks
  labels:
    app: earthworks-api
spec:
  hosts:
  - earthworks.islandcivil.com
  gateways:
  - earthworks-gateway
  http:
  - match:
    - uri:
        prefix: "/api/v1"
    route:
    - destination:
        host: earthworks-api
        port:
          number: 8000
