kubernetes/05-plotsvc-deploy.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: plotsvc
  name: plotsvc
  namespace: earthworks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: plotsvc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: plotsvc
        version: v1
    spec:
      containers:
      - image: stephenhillier/plotsvc:latest
        name: plotsvc
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
        resources:
          requests:
            cpu: 50m
            memory: 50mb
          limits:
            cpu: 100m
            memory: 100mb
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: plotsvc
  name: plotsvc
  namespace: earthworks
spec:
  ports:
  - port: 50051
    targetPort: 50051
  selector:
    app: plotsvc
status:
  loadBalancer: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: plotsvc-gateway
  namespace: earthworks
  labels:
    app: plotsvc
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - earthworks.islandcivil.com
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: plotsvc
  namespace: earthworks
  labels:
    app: plotsvc
spec:
  hosts:
  - plotsvc
  http:
  - route:
    - destination:
        host: plotsvc
        subset: v1
