kubernetes/07-web-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: earthworks-web-gateway
  namespace: earthworks
  labels:
    app: earthworks-web
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - earthworks.islandcivil.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: earthworks-web
  namespace: earthworks
  labels:
    app: earthworks-web
spec:
  hosts:
  - earthworks.islandcivil.com
  gateways:
  - earthworks-web-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: earthworks-web
        port:
          number: 80
